--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <title>i love pizza</title>
   <h1> oohhhhh im blinded by the lights</h1>
   </head>
   <body>
       <h1> i like parrots that dance</h1>
     <h2> i also like playing guitar wooooooooo</h2>
     <h3> the weeknd makes really good music wooooooo</h3>
+    <h6> the smallest header </h6>
   </body>
 </html>
