--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <h2> i also like playing guitar wooooooooo</h2>
     <h3> the weeknd makes really good music wooooooo</h3>
     <h6> the smallest header </h6>
+    <p><em>woooooooo</em> <strong>yaaaaa</strong> wooooooooo </p>
+    <p>singers to listen to</p>
+    <ul>
+      the weeknd
+      ariana grande
+      radiohead
+      olivia rodrigo
+      lana del rey
+    </ul>
   </body>
 </html>
