--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
     <h3> the weeknd makes really good music wooooooo</h3>
     <h6> the smallest header </h6>
     <p><em>woooooooo</em> <strong>yaaaaa</strong> wooooooooo </p>
-    <p>singers to listen to</p>
-    <li>
-      <ul>
-        the weeknd
-      ariana grande
-      radiohead
-      olivia rodrigo
-      lana del rey
-      </ul>
-      
-    </li>
+    <p>singers/band to listen to</p>
+  <li>the weeknd</li>
+    <li> ariana grande</li>
+    <li> olivia rodrigo</li>
+    <li> radiohead</li>
+    <li> lana del rey</li>
   </body>
 </html>
