--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h6> the smallest header </h6>
     <p><em>woooooooo</em> <strong>yaaaaa</strong> wooooooooo </p>
     <p>singers/band to listen to</p>
-  <li>the weeknd</li>
+    <ol><li>the weeknd</li>
     <li> ariana grande</li>
     <li> olivia rodrigo</li>
     <li> radiohead</li>
     <li> lana del rey</li>
+    </ol>
   </body>
 </html>
