--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <li> radiohead</li>
     <li> lana del rey</li>
     </ol>
+    <ol>
+      <li><a href= "./lesson2.html" target="_blank">Lesson 2</a></li>
+    </ol>
   </body>
 </html>
