--- a/lesson2.html
+++ b/lesson2.html
@@ -4,7 +4,7 @@
     <title>Lesson 2 Web Design</title>
     <body>
      <h3>Here is the index!</h3> <a href=./index.html></a>
-      <img src= "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.1800flowers.com%2Farticles%2Fflower-facts%2Fmost-beautiful-flowers&psig=AOvVaw1MbN824DOJyT_hzjvxhBt2&ust=1758911930852000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIj2ztjH9I8DFQAAAAAdAAAAABAE" alt="Here is a picture of a rose" >
+      <img/ src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.1800flowers.com%2Farticles%2Fflower-facts%2Fmost-beautiful-flowers&psig=AOvVaw1MbN824DOJyT_hzjvxhBt2&ust=1758911930852000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIj2ztjH9I8DFQAAAAAdAAAAABAE" alt="Here is a picture of a rose" >
     </body>
     <h1>Lesson 2 Information</h1>
     <p>We are creating a <a href="https://www.youtube.com">link</a></p>
