--- a/popmusic.html
+++ b/popmusic.html
@@ -5,7 +5,9 @@
   </head>
    <body>
     <h1>POP MUSIC</h1>
-       <h3>What is Pop Music?</h3>
-       <p>Pop Music is a genre of music that tends to be heard on the radio or on the front pages of Spotify's top hits. It's name is short for "popular". Many musicians may not enjoy this genre of music due to how much authenticity it lacks. </p>
+       <h3><strong>What is Pop Music?</strong></h3>
+       <p><em>Pop Music is a genre of music that tends to be heard on the radio or on the front pages of Spotify's top hits. It's name is short for "popular". Altough many music listeners may not enjoy this genre of music due to how much authenticity it lacks, it can be catchy at times.</em></p>
+     <h3><strong>What Instruments does Pop Music consist of?</strong></h3>
+     <p><em>Pop music consists of synthesizers, rhythmic drums, a electric or acoustic guitar, keyboard.</em> </p>
   </body> 
 </html>
