--- a/popmusic.html
+++ b/popmusic.html
@@ -9,5 +9,11 @@
        <p><em>Pop Music is a genre of music that tends to be heard on the radio or on the front pages of Spotify's top hits. It's name is short for <strong>"popular"</strong>. Altough many music listeners may not enjoy this genre of music due to how much authenticity it lacks, it can be catchy at times.</em></p>
      <h3><strong>What Instruments does Pop Music consist of?</strong></h3>
      <p><em>Pop music consists of synthesizers, rhythmic drums, a electric or acoustic guitar, keyboard.</em> </p>
+     <h3>Pop Artists</h3>
+     <ul>
+       <li>Ariana Grande - known for her wonderful whistle tones, she has wrote many pop hits like Thank U, Next, No Tears Left Cry, and 7 Rings. In 2019, she dominated 3 spots of the Billboard Hot 100 Charts. </li>
+       <li>Taylor Swift - with her poetic lyrics, she has achieved numerous milestones, along with being the only artist ever to win Album of the Year 4 times.</li>
+       <li>Adele - With hits like Easy On Me, Hello, and Rolling in the Deep, she has 16 Grammy Wins and is one Tony Award away from becoming a EGOT winner. (Receiving a Emmy, Grammy, Oscar, and Tony Award)</li>
+     </ul>
   </body> 
 </html>
