--- a/rnbmusic.html
+++ b/rnbmusic.html
@@ -4,6 +4,8 @@
     <title>Genres of Music Part 2</title>
   </head>
   <body> 
-    <h1>RNB MUSIC</h1>
+    <h1>R&B MUSIC</h1>
+    <h3>What is R&B Music?</h3>
+    <p><em>R&B music organinated in African American communities in the 1940s and consists of soulful vocals and smooth instrumentals. Some elements of this genre can be pop, soul, funk, and electronic. R&B stands for Rhythm and Blues.</em></p>
   </body>
 </html>
