--- a/learningjs.html
+++ b/learningjs.html
@@ -5,9 +5,7 @@
   <body>
     <h1>Welcome!</h1>
     <p>Nice to meet you, <span id="name"></span>!</p>
-    <script>
-      let name = prompt("Enter your name!");
-      document.getElementById("name").textContent = name;
+    <script>let name = prompt("Enter your name!"); document.getElementById("name").textContent = name;
     </script>
   </body>
 </html>
