--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,7 @@
         let num1 = Number(prompt("Enter a value: "))
         let num2 = Number(prompt("Enter another value!"));
         let answer = num1 + num2;
-        document.getElementById("answer").TextContent = answer;
+        document.getElementById("answer").textContent = answer;
       </script>
     </body>
   </html>
