--- a/introduction.html
+++ b/introduction.html
@@ -22,7 +22,7 @@ learn?</h2>
   <br>
   
 <h2>What do you like to do outside of class?</h2>
-<p>I enjoying listening to music, playing guitar, drawing, baking, and reading.</p>
+<p>I enjoying listening to music, playing guitar, singing, drawing, baking, and reading.</p>
 <br>
   
 <h2>If you could learn a skill instantly, what would it be?</h2>
