--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document Title</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<title>introduction</title>
 </head>
 <body>
 <h1>Mania Ashkanizadeh</h1>
