--- a/csslesson2.html
+++ b/csslesson2.html
@@ -7,16 +7,29 @@
 <title>CSS Lesson 2</title>
 </head>
 <body>
-    <h1>Mania<h1>
+  <div class="name">
+    <h1>Mania</h1>
+  </div>
+
+  <div class="Question">
+      
     <h2>What is a div element?</h2>
     <p>Groups the sections of a HTML together.</p>
+  </div>
+  <div class="question"
     <h2>What is one way you can identify or "target" a div element?</h2>
     <p>It can be identified in classes.</p>
+  </div>
+  <div class="question" 
     <h2>Why would you use a div event?</h2>
     <p>To organize your webpage in a way where users can access certain resources easily.</p>
+  </div>
+  <div class="question"
     <h2>What is a border property?</h2>
     <p>Creates a border around an element and allows you to style.</p>
-    <h2>What are ome of the different border properties?</h2>
+  </div>
+  <div class="question"
+    <h2>What are one of the different border properties?</h2>
     <ul>
     <li>Borders</li>
     <li>Border width</li>
@@ -24,7 +37,10 @@
     <li>Border sides</li>
     <li>Rounded Borders</li>
     </ul>
+  </div>
+  <div class="question"
     <h2>What is the difference between margins and padding?</h2>
-    <p>Margin is the space that the padding is being placed in.</p>
+    <p>Padding is the space between the content and the element and margin is the space between the div and other elements around it</p>
+  </div>
 </body>
 </html>
