--- a/csslesson2.html
+++ b/csslesson2.html
@@ -16,19 +16,19 @@
     <h2>What is a div element?</h2>
     <p>Groups the sections of a HTML together.</p>
   </div>
-  <div class="question"
+  <div class="Question"
     <h2>What is one way you can identify or "target" a div element?</h2>
     <p>It can be identified in classes.</p>
   </div>
-  <div class="question" 
+  <div class="Question" 
     <h2>Why would you use a div event?</h2>
     <p>To organize your webpage in a way where users can access certain resources easily.</p>
   </div>
-  <div class="question"
+  <div class="Question"
     <h2>What is a border property?</h2>
     <p>Creates a border around an element and allows you to style.</p>
   </div>
-  <div class="question"
+  <div class="Question"
     <h2>What are one of the different border properties?</h2>
     <ul>
     <li>Borders</li>
@@ -38,7 +38,7 @@
     <li>Rounded Borders</li>
     </ul>
   </div>
-  <div class="question"
+  <div class="Question"
     <h2>What is the difference between margins and padding?</h2>
     <p>Padding is the space between the content and the element and margin is the space between the div and other elements around it</p>
   </div>
