--- a/class5demo.html
+++ b/class5demo.html
@@ -11,6 +11,14 @@
   <h2>I'm Sticky</h2>
   <p><i>Text colour: #E7BFFF</i></p>
   <p><i>Background colour: #FFCFFA</i></p>
+  <div id="parent">
+    <h3>3 things you learned </h3>
+    <p>response</p><p>response</p><p>response</p>
+    <div id="child">
+      <h3>2 things you would like to know more about</h3>
+      <p>response</p><p>response</p>
+    </div>
+
 </div>
 </body>
 </html>
