--- a/class5demo.html
+++ b/class5demo.html
@@ -11,6 +11,7 @@
   <h2>I'm Sticky</h2>
   <p><i>Text colour: #E7BFFF</i></p>
   <p><i>Background colour: #FFCFFA</i></p>
+</div>
   <div id="parent">
     <h3>3 things you learned </h3>
     <p>response</p><p>response</p><p>response</p>
@@ -18,7 +19,14 @@
       <h3>2 things you would like to know more about</h3>
       <p>response</p><p>response</p>
     </div>
-
+<div id="fixed">
+  <p>colour: #FF79F2</p>
+  <p>height: auto</p>
+  <p>width: 30%</p>
 </div>
+    <div id="relative">
+      <h3>1 thing you are confused about</h3>
+      <p>response</p>
+    </div>
 </body>
 </html>
