--- a/class5demo.html
+++ b/class5demo.html
@@ -4,6 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CSS Lesson 5</title>
+<style>
+  #header{
+    position: sticky;
+  top: 0%;
+    width:80%;
+    height: 30px;
+    background-color: #C4FFBD;
+  }
+  
+</style>
 </head>
 <body>
 <h1>CSS: Sizing, Positioning & Selectors</h1>
@@ -28,5 +38,6 @@
       <h3>1 thing you are confused about</h3>
       <p>response</p>
     </div>
+    
 </body>
 </html>
