--- a/class5demo.html
+++ b/class5demo.html
@@ -12,7 +12,9 @@
     height: 30px;
     background-color: #C4FFBD;
   }
-  
+  #header p, h2 {
+    display: inline;
+  } 
 </style>
 </head>
 <body>
