--- a/class5demo.html
+++ b/class5demo.html
@@ -11,6 +11,7 @@
     width:80%;
     height: 30px;
     background-color: #C4FFBD;
+    margin: auto;
   }
   #header p, h2 {
     display: inline;
