--- a/class5demo.html
+++ b/class5demo.html
@@ -8,7 +8,7 @@
   #header{
     position: sticky;
   top: 0%;
-    width:80%;
+    width: 80%;
     height: 30px;
     background-color: #C4FFBD;
     margin: auto;
@@ -16,6 +16,13 @@
   #header p, h2 {
     display: inline;
   } 
+  #parent{
+    position: relative;
+    width: 80%;
+    height: 550px;
+    margin: auto;
+    background-color: #F5BDB5:
+  }
 </style>
 </head>
 <body>
