--- a/class5demo.html
+++ b/class5demo.html
@@ -21,7 +21,7 @@
     width: 80%;
     height: 550px;
     margin: auto;
-    background-color: #F5BDB5:
+    background-color: F5BDB5:
   }
 </style>
 </head>
