--- a/class5demo.html
+++ b/class5demo.html
@@ -10,7 +10,7 @@
   top: 0%;
     width: 80%;
     height: 30px;
-    background-color: #C4FFBD;
+    background-color: C4FFBD;
     margin: auto;
   }
   #header p, h2 {
@@ -30,7 +30,7 @@
 <div id="header">
   <h2>I'm Sticky</h2>
   <p><i>Text colour: #E7BFFF</i></p>
-  <p><i>Background colour: #FFCFFA</i></p>
+  <p><i>Background colour: FFCFFA</i></p>
 </div>
   <div id="parent">
     <h3>3 things you learned </h3>
