--- a/class5demo.html
+++ b/class5demo.html
@@ -12,6 +12,7 @@
     height: 30px;
     background-color: C4FFBD;
     margin: auto;
+    z-index: 1;
   }
   #header p, h2 {
     display: inline;
