--- a/class5demo.html
+++ b/class5demo.html
@@ -24,6 +24,11 @@
     margin: auto;
     background-color: #F5BDB5:
   }
+  #child{
+    position: absolute;
+    width: 75%;
+    height: 350px;
+    background-color: #F4442E;
 </style>
 </head>
 <body>
