--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -1,1 +1,14 @@
-
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="tstylecss" rel="stylesheet" type="text/css"/>
+<title>Troubleshooting Practice</title>
+</head>
+<body>
+<div id="corner-head"> <h1> Troubleshooting <div id=c-text>
+<h2>Mania</h2> <p>My favorite animal is a parrot<p><div id="b-text">
+<h3>My favorite colour is: red<h3><div id="colour"></div></div>
+<div id=text><h2>Lorem Ipsum<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam
+ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p></div>
+</div>
