--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -6,9 +6,19 @@
 <title>Troubleshooting Practice</title>
 </head>
 <body>
-<div id="corner-head"> <h1> Troubleshooting <div id=c-text>
-<h2>Mania</h2> <p>My favorite animal is a parrot<p><div id="b-text">
-<h3>My favorite colour is: red<h3><div id="colour"></div></div>
-<div id=text><h2>Lorem Ipsum<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam
-ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p></div>
+<div id="corner-head"> 
+  <h1>Troubleshooting</h1>
+<div id=c-text>
+    <h2>Mania</h2> 
+    <p>My favorite animal is a parrot</p>
+  <div id="b-text">
+    <h3>My favorite colour is: red</h3>
+<div id="colour"></div>
+</div>
+  
+<div id=text>
+  <h2>Lorem Ipsum</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam
+ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p>
+</div>
 </div>
