--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -8,7 +8,7 @@
 <body>
 <div id="corner-head"> 
   <h1>Troubleshooting</h1>
-<div id=c-text>
+<div id="c-text">
     <h2>Mania</h2> 
     <p>My favorite animal is a parrot</p>
   <div id="b-text">
@@ -16,9 +16,10 @@
 <div id="colour"></div>
 </div>
   
-<div id=text>
+<div id="text">
   <h2>Lorem Ipsum</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam
 ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p>
 </div>
 </div>
+</body>
