--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -12,7 +12,6 @@
 <div id="c-text">
     <h2>Mania</h2> 
     <p>My favorite animal is a parrot</p>
-</div>
   <div id="b-text">
     <h3>My favorite colour is: red</h3>
   </div>
@@ -24,3 +23,4 @@
 ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p>
 </div>
 </body>
+</html>
