--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -9,18 +10,19 @@
 <div id="corner-head"> 
   <h1>Troubleshooting</h1>
 </div>
-<div id="c-text">
+<div id="c-text"> <!--added the quotes around c-text-->
     <h2>Mania</h2> 
-    <p>My favorite animal is a parrot</p>
+    <p>My favorite animal is a parrot</p> <!--added the forward slash to the p tag-->
   <div id="b-text">
-    <h3>My favorite colour is: red</h3>
-  </div>
+    <h3>My favorite colour is: red</h3> <!--added forward slash to h3-->
+  </div> <!--added closing tag-->
 <div id="colour"></div>
-</div>
+</div> <!--added closing tag-->
+  
 <div id="text">
   <h2>Lorem Ipsum</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut diam
 ut nisi ullamcorper vestibulum. Ut vehicula, velit quis convallis rutrum, ipsum erat auctor ex.</p>
 </div>
 </body>
-</html>
+</html> <!--closed the html-->
