--- a/trouble.html
+++ b/trouble.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Alpaca Adventures</title>
-<link rel="stylesheet" href="alpacascss">
+<link rel="stylesheet" href="more.css" type="text/css"/> <!--This link tag is missing it's "type" component. Without this, the link tag is unable to read the writing we have in the HTML for the CSS to apply itself to it. Additionally, the link tag is missing it's closing. This helps let the HTML know that you are ending line of code to start a new one. Along with that, the name of the CSS file we are linking is incorrect. When linking a HTML to a CSS file, you must write the correct file name in order for the HTML to connect to an existing one. --> 
 </head>
 <body>
 <div id="sidebar">
 <h2>🦙 Alpaca Adventures</h2>
-<h2> Name</h2>
+<h2> Mania</h2>
 <ul>
 <li><a href="home">Home</a></li>
 <li><a href="#wool">Wool</a></li>
