--- a/trouble.html
+++ b/trouble.html
@@ -11,10 +11,10 @@
 <h2>🦙 Alpaca Adventures</h2>
 <h2> Mania</h2>
 <ul>
-<li><a href="home">Home</a></li>
+<li><a href="#home">Home</a></li> 
 <li><a href="#wool">Wool</a></li>
 <li><a href="#herds">Herd Life</a></li>
-<li><a href="#fun">Fun Facts</a>
+<li><a href="#fun">Fun Facts</a></li> <!-- This list tag was missing a closing tag. It is important to close off tags properly so the HTML knows that you are starting a new line. -->
 </ul>
 </div>
 <div id="content">
