--- a/trouble.html
+++ b/trouble.html
@@ -11,20 +11,21 @@
 <h2>🦙 Alpaca Adventures</h2>
 <h2> Mania</h2>
 <ul>
-<li><a href="#home">Home</a></li> 
+<li><a href="#home">Home</a></li> <!-- This href tag was missing a hashtag. If you want to create a link to a specific part of the file, you must add a hastag or else "home" will just be a placeholder or a 404 error. -->
 <li><a href="#wool">Wool</a></li>
 <li><a href="#herds">Herd Life</a></li>
 <li><a href="#fun">Fun Facts</a></li> <!-- This list tag was missing a closing tag. It is important to close off tags properly so the HTML knows that you are starting a new line. -->
 </ul>
 </div>
-<div id="content">
-<div id="home" class="section light">
+<div id="content"> <!-- This div was missing a closing tag. If there is no closing tag included, the HTML file will be unsure if the line of code is ending. -->
+<div id="home" class="section light"> <!-- This div was missing a closing tag. If there is no closing tag included, the HTML file will be unsure if the line of code is ending. -->
 <h1>Welcome to Alpaca Adventures</h1>
 <p>Alpacas live in the mountains of Peru and are known for their soft wool and gentle
 personalities. They travel in groups called herds.</p>
-
-<div id=wool class=section dark>
-<h2>Wonderful Wool<h2>
+</div> 
+</div>
+<div id="wool" class="section dark"> <!-- The div class and id was missing quotation marks. Without adding any quotations, the browser will assume it's the end of the code. -->
+<h2>Wonderful Wool<h2> 
 Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
 clothing.
 <div class="wool-box">
