--- a/trouble.html
+++ b/trouble.html
@@ -25,14 +25,14 @@ personalities. They travel in groups called herds.</p>
 </div> 
 </div>
 <div id="wool" class="section dark"> <!-- The div class and id was missing quotation marks. Without adding any quotations, the browser will assume it's the end of the code. -->
-<h2>Wonderful Wool<h2> 
+<h2>Wonderful Wool</h2> <!-- This h2 tag was missing a closing tag. It is important to write in the forward slash at the end of a code to tell the browser that you are starting on a new line --> 
 Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
 clothing.
 <div class="wool-box">
 <p>This box demonstrates <strong>absolute positioning</strong>.</p>
-<p>
+<p> <!-- This random paragraph tag is affecting the HTML skeleton. This causes less clarity throughout the HTML and causes the file to close by itself in different places -->
 <div class="wool-detail">
-I'm a smaller box positioned inside the larger one!</p>
+<p>I'm a smaller box positioned inside the larger one!</p> <!-- This paragraph is missing it's starting tag. Without a starting tag, the HTML will not read the paragraph tag and will ignore it. -->
 </div>
 </div>
 
