--- a/trouble.html
+++ b/trouble.html
@@ -35,7 +35,6 @@ clothing.
 <p>I'm a smaller box positioned inside the larger one!</p> <!-- This paragraph is missing it's starting tag. Without a starting tag, the HTML will not read the paragraph tag and will ignore it. -->
 </div>
 </div>
-
 </div>
 <div id="herds" class="section light">
 <h2>The Herd Life</h2>
@@ -45,9 +44,9 @@ leader that helps keep order in the group.</p>
 <div id="fun" class="section dark">
 <h2>Fun Facts</h2>
 <ul>
-<li>Alpacas can live up to 20 years.
+<li>Alpacas can live up to 20 years. 
 <li>They rarely spit at people — only other alpacas!</li>
-<li>Each alpaca has a unique “hum” sound.</li> </li>
+<li>Each alpaca has a unique “hum” sound.</li> </li> <!-- There was an extra list closing tag. If there is an extra closing tag, it is able to mess up the CSS elements and make them behave differently. -->
 </ul>
 </div>
 <div id="footer">
