--- a/trouble.html
+++ b/trouble.html
@@ -26,8 +26,8 @@ personalities. They travel in groups called herds.</p>
 </div>
 <div id="wool" class="section dark"> <!-- The div class and id was missing quotation marks. Without adding any quotations, the browser will assume it's the end of the code. -->
 <h2>Wonderful Wool</h2> <!-- This h2 tag was missing a closing tag. It is important to write in the forward slash at the end of a code to tell the browser that you are starting on a new line --> 
-Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
-clothing.
+<p>Alpaca wool is light, warm, and water-resistant. It's sheared every year to make cozy
+clothing.</p> <!---This piece of text was missing a p tag. Without applying a p tag, the HTML will not know how to read it and just ignore it.-->
 <div class="wool-box">
 <p>This box demonstrates <strong>absolute positioning</strong>.</p>
 <p> <!-- This random paragraph tag is affecting the HTML skeleton. This causes less clarity throughout the HTML and causes the file to close by itself in different places -->
