--- a/trouble.html
+++ b/trouble.html
@@ -51,6 +51,6 @@ leader that helps keep order in the group.</p>
 <div id="footer">
 <p>© 2025 Alpaca Adventures</p>
 </div>
-</div>
+</div> <!-- This closing div tag is meant to be at the bottom to close the div tag with the class "content". This caused the content to go under the sidebar rather than it staying beside the sidebar. -->
 </body>
 </html>
