--- a/nav.html
+++ b/nav.html
@@ -9,8 +9,8 @@
 <nav>
   <ul>
     <li><a class="active" href="#">Home</a></li>
-    <li><a href= "#">Page 2</a></li>
-    <li><a href>"#">Page 3</a></li>
+    <li><a href= <"#">Page 2</a></li>
+    <li><a href= <"#">Page 3</a></li>
   </ul>
 </nav>
   <button class="btn">click me</button>
