--- a/nav.html
+++ b/nav.html
@@ -15,8 +15,11 @@
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
+  
 </style>
 </head>
 <body>
