--- a/nav.html
+++ b/nav.html
@@ -19,7 +19,12 @@
     top: 0;
     width: 100%;
   }
-  
+  ul li {
+    float: left;
+  }
+  ul li a {
+    display: block;
+  }
 </style>
 </head>
 <body>
