--- a/nav.html
+++ b/nav.html
@@ -24,6 +24,9 @@
   }
   ul li a {
     display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
   }
 </style>
 </head>
