--- a/nav.html
+++ b/nav.html
@@ -28,6 +28,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    color: white;
   }
   ul li a:hover {
       background-color: #111;
