--- a/nav.html
+++ b/nav.html
@@ -32,8 +32,13 @@
   }
   ul li a:hover {
       background-color: #111;
-      text-decoration: dashed;
+      font-size: larger;
+      text-decoration: underline;
   }
+  ul li a.active {
+    background-color: #04AA6D;
+  }
+  
 </style>
 </head>
 <body>
