--- a/nav.html
+++ b/nav.html
@@ -30,7 +30,7 @@
     text-decoration: none;
     color: white;
   }
-  ul li a:hover {
+  ul li a:hover:not(.active) {
       background-color: #111;
       font-size: larger;
       text-decoration: underline;
