--- a/nav.html
+++ b/nav.html
@@ -44,9 +44,9 @@
 <body>
 <nav>
   <ul>
-    <li><a class="active" href="#">Home</a></li>
-    <li><a href= <"#">Page 2</a></li>
-    <li><a href= <"#">Page 3</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href= <"lesson2.html">Page 2</a></li>
+    <li><a href= <"rnbmusic.html">Page 3</a></li>
   </ul>
 </nav>
   <button class="btn">click me</button>
