--- a/rnbmusic.html
+++ b/rnbmusic.html
@@ -3,7 +3,13 @@
   <head>
     <title>Genres of Music Part 2</title>
   </head>
-  <body> 
+  <body> <nav>
+  <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href= <"lesson2.html">Page 2</a></li>
+    <li><a href= <"rnbmusic.html">Page 3</a></li>
+  </ul>
+</nav> 
     <h1>R&B MUSIC</h1>
     <h3>What is R&B Music?</h3>
     <p><em>R&B music organinated in African American communities in the 1940s and consists of soulful vocals and smooth instrumentals. Some elements of this genre can be pop, soul, funk, and electronic. R&B stands for Rhythm and Blues.</em></p>
