--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <h1> oohhhhh im blinded by the lights</h1>
   </head>
   <body>
+    <nav>
+  <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href= <"lesson2.html">Page 2</a></li>
+    <li><a href= <"rnbmusic.html">Page 3</a></li>
+  </ul>
+</nav>
       <h1> i like parrots that dance</h1>
     <h2> i also like playing guitar wooooooooo</h2>
     <h3> the weeknd makes really good music wooooooo</h3>
