--- a/lesson2.html
+++ b/lesson2.html
@@ -3,6 +3,13 @@
   <head>
     <title>Lesson 2 Web Design</title>
     <body>
+      <nav>
+  <ul>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href= <"lesson2.html">Page 2</a></li>
+    <li><a href= <"rnbmusic.html">Page 3</a></li>
+  </ul>
+</nav>
      <h3>Here is the index!</h3> <a href=./index.html>link</a>
       <img src=https://images.contentstack.io/v3/assets/bltcedd8dbd5891265b/blt628c4ca0754c7ceb/6668df69eca9a676ee3250a8/beautiful-flowers-lily.jpg?q=70&width=3840&auto=webp" alt="here is a picture of a flower"> 
     <h1>Lesson 2 Information</h1>
