--- a/rnbmusic.html
+++ b/rnbmusic.html
@@ -5,7 +5,7 @@
   </head>
   <body> <nav>
   <ul>
-    <li><a class="active" href="index.html">Home</a></li>
+    <li><a class="active" href="nav.html">Home</a></li>
     <li><a href= <"lesson2.html">Page 2</a></li>
     <li><a href= <"rnbmusic.html">Page 3</a></li>
   </ul>
