--- a/rnbmusic.html
+++ b/rnbmusic.html
@@ -2,6 +2,42 @@
 <html>
   <head>
     <title>Genres of Music Part 2</title>
+    <style>
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  ul li {
+    float: left;
+  }
+  ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: white;
+  }
+  ul li a:hover:not(.active) {
+      background-color: #111;
+      font-size: larger;
+      text-decoration: underline;
+  }
+  ul li a.active {
+    background-color: #04AA6D;
+  }
+  
+</style>
   </head>
   <body> <nav>
   <ul>
