--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  ul li {
+    float: left;
+  }
+  ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: white;
+  }
+  ul li a:hover:not(.active) {
+      background-color: #111;
+      font-size: larger;
+      text-decoration: underline;
+  }
+  ul li a.active {
+    background-color: #04AA6D;
+  }
+  
+</style>
   <title>i love pizza</title>
   <h1> oohhhhh im blinded by the lights</h1>
   </head>
