--- a/rnbmusic.html
+++ b/rnbmusic.html
@@ -39,7 +39,8 @@
   
 </style>
   </head>
-  <body> <nav>
+  <body> 
+    <nav>
   <ul>
     <li><a class="active" href="nav.html">Home</a></li>
     <li><a href= <"lesson2.html">Page 2</a></li>
