--- a/boot.html
+++ b/boot.html
@@ -9,7 +9,7 @@
 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 bg-dark text-white">
   <h1>Mania Parrot Store</h1>
 </div>
   
