--- a/boot.html
+++ b/boot.html
@@ -12,6 +12,12 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
 <div class="container-fluid pt-5 bg-dark text-white">
   <h1>Mania Parrot Store</h1>
 </div>
-  
+  <div class="container my-3">
+    <div class="row">
+    <div class="col"> Cockatiel</div>
+    <div class="col"> Indian Ringneck</div>
+    <div class="col">Conure</div>
+    </div>
+  </div>
 </body>
 </html>
