--- a/boot.html
+++ b/boot.html
@@ -14,9 +14,9 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
 </div>
   <div class="container my-3">
     <div class="row">
-    <div class="col bg-info"> Cockatiel</div>
-    <div class="col bg-primary"> Indian Ringneck</div>
-    <div class="col bg-info">Conure</div>
+    <div class="col-md-4 bg-info m-1"> Cockatiel</div>
+    <div class="col-md-4 bg-primary m-1"> Indian Ringneck</div>
+    <div class="col-md-4 bg-info m-1">Conure</div>
     </div>
   </div>
 </body>
