--- a/boot.html
+++ b/boot.html
@@ -19,5 +19,21 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
     <div class="col-md-4 bg-info m-1">Conure</div>
     </div>
   </div>
+
+  <div class= "container my-3">
+    <div class="row"> 
+      <h2>Available  Now</h2>
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top img-fluid"> src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6oVSul_shQpz1Xg1GHaWJkhZQEY2VnVuEQ&s"
+          <div class="card-body">
+            <h4 class="card-title">Available Now</h4>
+            <p class="card-text">Indian Ringneck</p>
+            <a href="#" class="btn btn-dark">im a bird</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
