--- a/boot.html
+++ b/boot.html
@@ -25,7 +25,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
       <h2>Available  Now</h2>
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top img-fluid"> src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6oVSul_shQpz1Xg1GHaWJkhZQEY2VnVuEQ&s"
+          <img class="card-img-top img-fluid"> src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6oVSul_shQpz1Xg1GHaWJkhZQEY2VnVuEQ&s">
           <div class="card-body">
             <h4 class="card-title">Available Now</h4>
             <p class="card-text">Indian Ringneck</p>
