--- a/boot.html
+++ b/boot.html
@@ -28,7 +28,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
           <img class="card-img-top img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6oVSul_shQpz1Xg1GHaWJkhZQEY2VnVuEQ&s">
           <div class="card-body">
             <h4 class="card-title">Available Now</h4>
-            <p class="card-text">Indian Ringneck</p>
+            <p class="card-text">Cockatiel</p>
             <a href="#" class="btn btn-dark">im a bird</a>
           </div>
         </div>
