--- a/class5demo.html
+++ b/class5demo.html
@@ -7,10 +7,10 @@
 <style>
   #header{
     position: sticky;
-  top: 0%;
+    top: 0%;
     width: 80%;
     height: 30px;
-    background-color: C4FFBD;
+    background-color: #7B9E89;
     margin: auto;
     z-index: 1;
   }
