--- a/class5demo.html
+++ b/class5demo.html
@@ -22,13 +22,14 @@
     width: 80%;
     height: 550px;
     margin: auto;
-    background-color: #F5BDB5:
+    background-color: #FC9E4F:
   }
   #child{
     position: absolute;
     width: 75%;
     height: 350px;
     background-color: #F4442E;
+    right: 7%;
 </style>
 </head>
 <body>
