--- a/class5demo.html
+++ b/class5demo.html
@@ -30,6 +30,12 @@
     height: 350px;
     background-color: #F4442E;
     right: 7%;
+  }
+
+  #child p, h3{
+    padding: 3%;
+    font-size: 1.25rem;
+  }
 </style>
 </head>
 <body>
