--- a/class5demo.html
+++ b/class5demo.html
@@ -36,6 +36,13 @@
     padding: 3%;
     font-size: 1.25rem;
   }
+  #fixed{
+    width: 30%;
+    height: auto;
+    border-radius: 55px;
+    background-color: #FC9E4F;
+    color: #020122;
+  }
 </style>
 </head>
 <body>
