--- a/class5demo.html
+++ b/class5demo.html
@@ -43,6 +43,10 @@
     background-color: #FC9E4F;
     color: #020122;
   }
+  #fixed p{
+    display: inline;
+    padding: 5%;
+  }
 </style>
 </head>
 <body>
@@ -60,7 +64,7 @@
       <p>response</p><p>response</p>
     </div>
 <div id="fixed">
-  <p>colour: #FF79F2</p>
+  <p>color: #FF79F2</p>
   <p>height: auto</p>
   <p>width: 30%</p>
 </div>
