--- a/class5demo.html
+++ b/class5demo.html
@@ -42,6 +42,7 @@
     border-radius: 55px;
     background-color: #FC9E4F;
     color: #020122;
+    position: fixed;
   }
   #fixed p{
     display: inline;
