--- a/class5demo.html
+++ b/class5demo.html
@@ -43,6 +43,8 @@
     background-color: #FC9E4F;
     color: #020122;
     position: fixed;
+    left: 0;
+    bottom: 0;
   }
   #fixed p{
     display: inline;
