--- a/class5demo.html
+++ b/class5demo.html
@@ -22,7 +22,7 @@
     width: 80%;
     height: 550px;
     margin: auto;
-    background-color: aquamarine:
+    background-color: aquamarine;
   }
   #child{
     position: absolute;
