--- a/class5demo.html
+++ b/class5demo.html
@@ -55,6 +55,7 @@
     height: 360px;
     background-color: #EDD382;
     color: #020122;
+    position: relative;
   }
   #relative p, h3{
     padding: 3%;
