--- a/class5demo.html
+++ b/class5demo.html
@@ -56,6 +56,7 @@
     background-color: #EDD382;
     color: #020122;
     position: relative;
+    margin: auto;
   }
   #relative p, h3{
     padding: 3%;
