--- a/class5demo.html
+++ b/class5demo.html
@@ -57,6 +57,9 @@
     color: #020122;
     position: relative;
     margin: auto;
+    top: 250px;
+    left: 20%;
+    z-index: -1:
   }
   #relative p, h3{
     padding: 3%;
