--- a/class5demo.html
+++ b/class5demo.html
@@ -56,7 +56,7 @@
     background-color: #EDD382;
     color: #020122;
     position: relative;
-    margin: auto;
+    /* margin: auto; */
     top: 250px;
     left: 20%;
     z-index: -1;
