--- a/class5demo.html
+++ b/class5demo.html
@@ -30,6 +30,7 @@
     height: 350px;
     background-color: #F4442E;
     right: 7%;
+    margin: auto;
   }
 
   #child p, h3{
@@ -73,14 +74,16 @@
   <h2>I'm Sticky</h2>
   <p><i>Text colour: #E7BFFF</i></p>
   <p><i>Background colour: FFCFFA</i></p>
+</div>
   <div id="parent">
     <h3>3 things you learned </h3>
     <p>response</p><p>response</p><p>response</p>
+    
     <div id="child">
       <h3>2 things you would like to know more about</h3>
       <p>response</p><p>response</p>
       </div>
-    </div>
+  </div>
 <div id="fixed">
   <p>color: #FF79F2</p>
   <p>height: auto</p>
