--- a/class5demo.html
+++ b/class5demo.html
@@ -78,10 +78,10 @@
   <div id="parent">
     <h3>3 things you learned </h3>
     <p>response</p><p>response</p><p>response</p>
-    
     <div id="child">
       <h3>2 things you would like to know more about</h3>
-      <p>response</p><p>response</p>
+      <p>response</p>
+      <p>response</p>
       </div>
   </div>
 <div id="fixed">
