--- a/class5demo.html
+++ b/class5demo.html
@@ -13,6 +13,9 @@
     background-color: #7B9E89;
     margin: auto;
     z-index: 1;
+    border-style: solid;
+    border-color: #111;
+    border-width: 1px;
   }
   #header p, h2 {
     display: inline;
