--- a/class5demo.html
+++ b/class5demo.html
@@ -15,7 +15,8 @@
     z-index: 1;
     border-style: solid;
     border-color: #111;
-    border-width: 5px;
+    border-width: 3px;
+    border-radius: 20px;
   }
   #header p, h2 {
     display: inline;
