--- a/class5demo.html
+++ b/class5demo.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +21,7 @@
   }
   #header p, h2 {
     display: inline;
+    margin: 10%
   } 
   #parent{
     position: relative;
