--- a/boot.html
+++ b/boot.html
@@ -9,6 +9,28 @@
 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cockatiels</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Indian Ringnecks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Conure</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container-fluid pt-5 bg-dark text-white">
   <h1>Mania Parrot Store</h1>
 </div>
