--- a/boot.html
+++ b/boot.html
@@ -81,5 +81,10 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
       </div>
     </div>
   </div>
+  <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
+
+<div id="demo" class="collapse">
+Lorem ipsum dolor text....
+</div>
 </body>
 </html>
