--- a/boot.html
+++ b/boot.html
@@ -86,5 +86,26 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
 <div id="demo" class="collapse">
 Lorem ipsum dolor text....
 </div>
+<div class="hover-row">
+  <thead>
+    <th>First Name</th>
+    <th>Species</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bobby the Builder</td>
+      <td>Cockatiel</td>
+    </tr>
+    <tr>
+      <td>Lime Lemon</td>
+      <td>Indian Ringneck</td>
+    </tr>
+    <tr>
+      <td>Avacado Guacamole</td>
+      <td>Conure</td>
+    </tr>
+  </tbody>
+</div>
+  
 </body>
 </html>
