--- a/boot.html
+++ b/boot.html
@@ -86,7 +86,7 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
 <div id="demo" class="collapse">
 Lorem ipsum dolor text....
 </div>
-<div class="hover-row">
+<table class="hover-row">
   <thead>
     <th>First Name</th>
     <th>Species</th>
