--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro To JavaScript</title>
+    <script>
+        console.log("Hello World!");
+    
+    </script>
   </head>
   <body>
     <h1>Mania</h1>
