--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -25,6 +25,13 @@
     let favouritesnack="chips"
 
     console.log(favouritesnack);
+
+      let name="mania";
+      let grade= "100";
+      let job= "parrot poop cleaner";
+
+      console.log(name, grade, job);
+      
         
     </script>
   </head>
