--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -41,6 +41,10 @@
       num1 = num2 + num3;
       num2 = num1 + num3;
       num3= num2 + num1;
+
+      console.log(num1);
+      console.log(num2);
+      console.log(num3);
       
     </script>
   </head>
