--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -45,7 +45,12 @@
       console.log(num1);
       console.log(num2);
       console.log(num3);
-      
+
+      let first= "quandle";
+      let name= "dingle";
+      let quest ="how r u?";  
+
+      console.log(`Hey ${first} ${last}. ${quest}`)
     </script>
   </head>
   <body>
