--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -47,7 +47,7 @@
       console.log(num3);
 
       let first= "quandle";
-      let name= "dingle";
+      let last= "dingle";
       let quest ="how r u?";  
 
       console.log(`Hey ${first} ${last}. ${quest}`)
