--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -51,6 +51,9 @@
       let quest ="how r u?";  
 
       console.log(`Hey ${first} ${last}. ${quest}`)
+
+      let age = prompt("enter your age");
+      
     </script>
   </head>
   <body>
