--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -53,6 +53,8 @@
       console.log(`Hey ${first} ${last}. ${quest}`)
 
       let age = prompt("enter your age");
+
+      console.log(`you are ${age} years old. ur unc bud`);
       
     </script>
   </head>
