--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -54,7 +54,7 @@
 
       let age = prompt("enter your age");
 
-      console.log(`you are ${age} years old. ur unc bud`);
+      console.log(`you are ${age} years old.`);
       
     </script>
   </head>
