--- a/introtojavascript.html
+++ b/introtojavascript.html
@@ -53,8 +53,10 @@
       console.log(`Hey ${first} ${last}. ${quest}`)
 
       let age = prompt("enter your age");
+      age = Number(age);
 
       console.log(`you are ${age} years old.`);
+      console.log(age + 1);
       
     </script>
   </head>
