--- a/jstask.html
+++ b/jstask.html
@@ -11,10 +11,12 @@ let chips="$1";
 let cookies="$2";
 let donut="$3";
 let tax=1.13;
+let total=0;
+
+total= (lettuce+tomato)*tax;
+console.log(chips, cookies, donut, tax, total);
   
-console.log(chips * tax);
-console.log(cookies * tax);
-console.log(donut * tax);
+
   
 
 
