--- a/jstask.html
+++ b/jstask.html
@@ -13,7 +13,7 @@ let donut="$3";
 let tax=1.13;
 let total=0;
 
-total= (lettuce+tomato)*tax;
+total= (chips+cookies+donut)*tax;
 console.log(chips, cookies, donut, tax, total);
   
 
