--- a/jstask.html
+++ b/jstask.html
@@ -10,16 +10,9 @@
 let chips="$1";
 let cookies="$2";
 let donut="$3";
-let tax=1.13;
-let total=0;
-
-total= (chips+cookies+donut)*tax;
+let tax="1.13%";
+let total="$6.78";
 console.log(chips, cookies, donut, tax, total);
-  
-
-  
-
-
 
 </script>
 </body>
