--- a/finalproject.html
+++ b/finalproject.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="finalproject.css" rel="stylesheet" type"text/css"/>
-<title>Document Title</title>
+<title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
 <div class="logo">
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="100" height="100">
   </div>
 <div class="navigation">
   <a href="#">Photobooth</a>
