--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="logo">
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="150">
+  <img src="Screenshot_2025-11-11_at_2.37.05_PM-removebg-preview.png alt="picture of logo" width="300" height="150">
   </div>
 <div class="navigation">
   <a href="#">Photobooth</a>
