--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="logo">
-  <img src="Screenshot_2025-11-11_at_2.37.05_PM-removebg-preview.png alt="picture of logo" width="300" height="150">
+  <img src="Screenshot_2025-11-11_at_2.37.05_PM-removebg-preview.png" alt="picture of logo" width="300" height="150">
   </div>
 <div class="navigation">
   <a href="#">Photobooth</a>
