--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="finalproject.css" rel="stylesheet" type"text/css"/>
+<link href="finalprojectpage1.css" rel="stylesheet" type"text/css"/>
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
 <div class="logo">
-  <img src="Screenshot_2025-11-11_at_2.37.05_PM-removebg-preview.png" alt="picture of logo" width="300" height="150">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="150">
   </div>
 <div class="navigation">
   <a href="#">Photobooth</a>
   <a href="#">FAQ</a>
   </div>
-  <div class="page1aboutush1">
+  <div class="aboutush1">
     <h1>About Us</h1>
   </div> 
-  <div class="page1aboutush3">
+  <div class="aboutush3">
     <h3>
       La Feliz is a premium self-shoot portrait experience with a pro-
 grade lighting, curated props, an complete creative control.
@@ -28,7 +28,7 @@ content, or just celebrating yourself, we provide the space.
 You make the magic!
     </h3>
     </div>
- <div class="page1aboutusimages">
+ <div class="aboutusimages">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart">
