--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -33,5 +33,9 @@ You make the magic!
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart">
  </div>
+  <div class="studioh1">
+  <h1>Studios</h1>
+  </div>
+    
 </body>
 </html>
