--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -4,16 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="finalprojectpage1.css" rel="stylesheet" type"text/css"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <title>La Feliz | Self Protrait Studio</title>
 </head>
 <body>
 <div class="logo">
-  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="150">
+  <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/376098f3-708c-4cf9-995e-1c5d8e3d67d4/www.lafeliz.ca-2.png?format=1500w" alt="picture of logo" width="300" height="100">
   </div>
-<div class="navigation">
-  <a href="#">Photobooth</a>
-  <a href="#">FAQ</a>
+<nav class= "navbar navbar-expand-sm bg-light">
+  <div class="navigation">
+  <ul class="navbar-nav">
+    <li class="nav item">
+      <a class="nav-link" href="#">Photobooth</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">FAQ</a>
+    </li>
+    </ul>
   </div>
+  
+  </nav>
   <div class="aboutush1">
     <h1>About Us</h1>
   </div> 
@@ -36,6 +48,49 @@ You make the magic!
   <div class="studioh1">
   <h1>Studios</h1>
   </div>
-    
+  <div class="studioh3flex">
+    <h3>
+      Studio 1 - The Full-Body Flex
+    </h3>
+    <div class="studioflexinfo">
+      <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.Holds up to 8 guests</h4>
+  </div>
+    <div class="flexbutton">
+      <button type="button">Book a session now!</button>
+    </div>
+  <div class="studioh3glow">
+       <h3>Studio 2 - The Close-Up Glow</h3>  
+  </div>
+    <div class="studioglowinfo">
+      <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups. Holds up to 6 guests</h4>
+    </div>
+    <div class="glowbutton">
+      <button type="button">Book a session now!</button>
+    </div>
+  <div class="studioh3red">
+       <h3>Studio 3 - The Red Box</h3>
+       </div>
+    <div class="studioredinfo">
+      <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots. Holds up to 5 guests</h4>
+    </div>
+<div class="redbutton">
+      <button type="button">Book a session now!</button>
+    </div>
+   <div class="location">
+     <h6>Location</h6>
+     <a href="maps.app.goo.gl/GWvBwgbJjB4KgUhu5?g_st=com.google.maps.preview.copy"><h6>476 Timothy St. Newmarket, ON L3Y 1P8<h6></a>
+    </div>
+    <div class="hours">
+      <h6>Hours</h6>
+      <h6>Monday (CLOSED)</h6>
+      <h6>Tuesday (CLOSED)</h6>
+      <h6>Wednesday - Sunday</h6>
+      <h6>12PM - 6PM</h6>
+    </div>
+       <div class="contact">
+         <h6>Contact</h6>
+         <h6><u>lafelizinquiries@gmail.com</u></h6>
+         <h6><u>+1(289)763-2630</u></h6>
+    </div>
 </body>
 </html>
