--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -17,10 +17,10 @@ rel="stylesheet">
   <div class="navigation">
   <ul class="navbar-nav">
     <li class="nav item">
-      <a class="nav-link" href="#">Photobooth</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage2.html">Photobooth</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">FAQ</a>
+      <a class="nav-link" href="https://maniaashkani.github.io/finalprojectpage3.html">FAQ</a>
     </li>
     </ul>
   </div>
@@ -87,10 +87,12 @@ You make the magic!
       <h6>Wednesday - Sunday</h6>
       <h6>12PM - 6PM</h6>
     </div>
+       <footer>
        <div class="contact">
          <h6>Contact</h6>
          <h6><u>lafelizinquiries@gmail.com</u></h6>
          <h6><u>+1(289)763-2630</u></h6>
     </div>
+       </footer>
 </body>
 </html>
