--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -55,7 +55,7 @@ You make the magic!
       <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.Holds up to 8 guests</h4>
   </div>
     <div class="flexbutton">
-      <button type="button">Book a session now!</button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</button>
     </div>
   <div class="studioh3glow">
        <h3>Studio 2 - The Close-Up Glow</h3>  
