--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -55,7 +55,7 @@ You make the magic!
       <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.Holds up to 8 guests</h4>
   </div>
     <div class="flexbutton">
-      <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
     </div>
   <div class="studioh3glow">
        <h3>Studio 2 - The Close-Up Glow</h3>  
@@ -64,7 +64,7 @@ You make the magic!
       <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups. Holds up to 6 guests</h4>
     </div>
     <div class="glowbutton">
-      <button type="button">Book a session now!</button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button>
     </div>
   <div class="studioh3red">
        <h3>Studio 3 - The Red Box</h3>
@@ -73,7 +73,7 @@ You make the magic!
       <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots. Holds up to 5 guests</h4>
     </div>
 <div class="redbutton">
-      <button type="button">Book a session now!</button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1"></a>Book a session now!</button>
     </div>
    <div class="location">
      <h6>Location</h6>
