--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -73,7 +73,7 @@ You make the magic!
       <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots. Holds up to 5 guests</h4>
     </div>
 <div class="redbutton">
-      <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1"></a>Book a session now!</button>
+      <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
     </div>
    <div class="location">
      <h6>Location</h6>
