--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -41,8 +41,8 @@ You make the magic!
     </div>
  <div class="aboutusimages">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="300" height="300">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats">
-   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/99110c5a-4c8d-4aca-a438-e24bf3d483c7/IMG_7652.jpeg?format=750w" alt="picture of two ladies wearing animal hats" width="300" height="300">
+   <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="300" height="300">
  </div>
   <div class="studioh1">
   <h1>Studios</h1>
