--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -52,7 +52,8 @@ You make the magic!
       Studio 1 - The Full-Body Flex
     </h3>
     <div class="studioflexinfo">
-      <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.Holds up to 8 guests</h4>
+      <h4>Studio 1 is built for full-body shots, fashion styling, movement, and group protraits.</h4>
+      <h4>Holds up to 8 guests</h4>
   </div>
     <div class="flexbutton">
       <button type="button"><a href="https://www.lafeliz.ca/book-now-1-1">Book a session now!</a></button>
@@ -61,7 +62,8 @@ You make the magic!
        <h3>Studio 2 - The Close-Up Glow</h3>  
   </div>
     <div class="studioglowinfo">
-      <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups. Holds up to 6 guests</h4>
+      <h4>Studio 2 is designed for sharp headshots, beauty portraits, and intimate close-ups.</h4>
+      <h4>Holds up to 6 guests</h4>
     </div>
     <div class="glowbutton">
       <button type="button"><a href="https://www.lafeliz.ca/book-now-2-1">Book a session now!</a></button>
@@ -70,7 +72,8 @@ You make the magic!
        <h3>Studio 3 - The Red Box</h3>
        </div>
     <div class="studioredinfo">
-      <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots. Holds up to 5 guests</h4>
+      <h4>Studio 3 is an all red setup with a high angle camera. Ideal for creative shots.</h4>
+      <h4>Holds up to 5 guests</h4>
     </div>
 <div class="redbutton">
       <button type="button"><a href="https://www.lafeliz.ca/book-now-3-1">Book a session now!</a></button>
