--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -36,8 +36,10 @@ grade lighting, curated props, an complete creative control.
 Whether you’re updating your Linkedin headshot, creating
 content, or just celebrating yourself, we provide the space.
 
-You make the magic!
+
     </h3>
+    <div class="aboutush3part2">
+      <h3>You make the magic!</h3>
     </div>
  <div class="aboutusimages">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="300" height="500">
