--- a/finalprojectpage1.html
+++ b/finalprojectpage1.html
@@ -41,6 +41,7 @@ content, or just celebrating yourself, we provide the space.
     <div class="aboutush3part2">
       <h3>You make the magic!</h3>
     </div>
+    <div class="container">
  <div class="aboutusimages">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/e1bf9da0-6f0e-480e-b29a-84e740d5a7ea/IMG_9353.jpeg?format=750w" alt="picture of two ladies holding flowers" width="300" height="500">
  </div>
@@ -49,6 +50,7 @@ content, or just celebrating yourself, we provide the space.
 </div>
   <div class="aboutusimagespart3">
    <img src="https://images.squarespace-cdn.com/content/v1/67f68b6fd858cc09e640e965/41b08bec-9104-4e45-96e8-e64b3e798d35/IMG_6231.jpeg?format=750w" alt="picture of two people making a heart" width="300" height="500">
+  </div>
   </div>
   <div class="studioh1">
   <h1>Studios</h1>
